# copy_oocyst_prediction

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  environment.yml  environment_dev.yml  inputs.csv  predict_cells.py  predict_oocyst_counts.py  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: main.yml
src/: model_selection_classify_live_and_dead.py  predict_oocyst_counts.py  svm.onnx  utils.py
src/copy_oocyst_prediction/: model_selection_classify_live_and_dead.py  predict_oocyst_counts.py  sitk_ims_file_io.py  utils.py
